--- a/bpd.html
+++ b/bpd.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--Project site for 5D NEU FALL 2017 Ralph Perricelli-->
 <!--title of the webpage, index page named 5D-->
@@ -199,9 +200,7 @@
                   <a href="bpd/6.png" data-toggle="lightbox" data-gallery="gallery-name">
                   <img class="img-fluid img-thumbnail" src="bpd/6.png" alt="">
                   </a>
-                  <figcaption class="figure-caption">A caption for the above image.
-                     A caption for the above image
-                     A caption for the above image
+                  <figcaption class="figure-caption">New renderings with addition of braille to building directory
                   </figcaption>
                </figure>
             </div>
@@ -210,9 +209,7 @@
                   <a href="bpd/5c.png" data-toggle="lightbox" data-gallery="gallery-name">
                   <img class="img-fluid img-thumbnail" src="bpd/5c.png" alt="">
                   </a>
-                  <figcaption class="figure-caption">A caption for the above image.
-                     A caption for the above image
-                     A caption for the above image
+                  <figcaption class="figure-caption">Outdoor sign installation specs
                   </figcaption>
                </figure>
             </div>
@@ -222,6 +219,26 @@
                   <img class="img-fluid img-thumbnail" src="img/bpdsign.jpeg" alt="">
                   </a>
                   <figcaption class="figure-caption">Sign, 2017
+                  </figcaption>
+               </figure>
+            </div>
+         </div>
+         <div class="row text-center">
+            <div class="col-md-4">
+               <figure class="figure">
+                  <a href="https://s3-media2.fl.yelpcdn.com/bphoto/HENrmm9Py_eH0ffe7gB-8w/o.jpg" data-toggle="lightbox" data-gallery="gallery-name">
+                  <img class="img-fluid img-thumbnail" src="https://s3-media2.fl.yelpcdn.com/bphoto/HENrmm9Py_eH0ffe7gB-8w/o.jpg" alt="">
+                  </a>
+                  <figcaption class="figure-caption">Only photo of the public cafeteria, named Station 10
+                  </figcaption>
+               </figure>
+            </div>
+            <div class="col-md-4">
+               <figure class="figure">
+                  <a href="https://preview.ibb.co/ktoG5G/Screen_Shot_2017_12_05_at_2_29_40_PM.png" data-toggle="lightbox" data-gallery="gallery-name">
+                  <img class="img-fluid img-thumbnail" src="https://preview.ibb.co/ktoG5G/Screen_Shot_2017_12_05_at_2_29_40_PM.png" alt="">
+                  </a>
+                  <figcaption class="figure-caption">Station 10 public review
                   </figcaption>
                </figure>
             </div>
