--- a/southEnd.html
+++ b/southEnd.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--Project site for 5D NEU FALL 2017 Ralph Perricelli-->
 <!--title of the webpage, index page named 5D-->
@@ -44,7 +45,7 @@
             <li class="nav-item active">
                <a class="nav-link" href="southEnd.html">+ U.S.E.S. Center</a>
                <ul><a class="nav-link-alt" href="#overview">overview</a></ul>
-               <ul><a class="nav-link-alt" href="#stull">archives</a></ul>
+               <ul><a class="nav-link-alt" href="#archives">archives</a></ul>
             </li>
          </ul>
       </div>
